--- a/genindex.html
+++ b/genindex.html
@@ -89,6 +89,7 @@
 
 <div class="genindex-jumpbox">
  <a href="#A"><strong>A</strong></a>
+ | <a href="#B"><strong>B</strong></a>
  | <a href="#C"><strong>C</strong></a>
  | <a href="#D"><strong>D</strong></a>
  | <a href="#F"><strong>F</strong></a>
@@ -108,10 +109,30 @@
   </ul></td>
 </tr></table>
 
+<h2 id="B">B</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="flightmodels.html#flightmodels.tools.bl_coord">bl_coord() (in module flightmodels.tools)</a>
+</li>
+  </ul></td>
+</tr></table>
+
 <h2 id="C">C</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="flightmodels.html#flightmodels.tools.calc_w_meas">calc_w_meas() (in module flightmodels.tools)</a>
+</li>
+      <li><a href="flightmodels.html#flightmodels.tools.choose_min_long">choose_min_long() (in module flightmodels.tools)</a>
+</li>
+      <li><a href="flightmodels.html#flightmodels.tools.choose_min_prof">choose_min_prof() (in module flightmodels.tools)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="flightmodels.html#flightmodels.tools.compute_insitu_density">compute_insitu_density() (in module flightmodels.tools)</a>
+</li>
       <li><a href="flightmodels.html#flightmodels.tools.convert_units_var">convert_units_var() (in module flightmodels.tools)</a>
+</li>
+      <li><a href="flightmodels.html#flightmodels.tools.cum_ttest">cum_ttest() (in module flightmodels.tools)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -173,6 +194,10 @@
       <li><a href="flightmodels.html#flightmodels.utilities.get_default_data_dir">get_default_data_dir() (in module flightmodels.utilities)</a>
 </li>
   </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="flightmodels.html#flightmodels.tools.gridthem">gridthem() (in module flightmodels.tools)</a>
+</li>
+  </ul></td>
 </tr></table>
 
 <h2 id="L">L</h2>
@@ -190,6 +215,8 @@
 <h2 id="M">M</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="flightmodels.html#flightmodels.tools.ml_coord">ml_coord() (in module flightmodels.tools)</a>
+</li>
       <li>
     module
 
@@ -211,7 +238,7 @@
 <h2 id="P">P</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="flightmodels.html#flightmodels.plotters.plot_monthly_transport">plot_monthly_transport() (in module flightmodels.plotters)</a>
+      <li><a href="flightmodels.html#flightmodels.plotters.plot_model_comparisons">plot_model_comparisons() (in module flightmodels.plotters)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -219,10 +246,14 @@
 <h2 id="R">R</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="flightmodels.html#flightmodels.tools.reformat_units_var">reformat_units_var() (in module flightmodels.tools)</a>
+      <li><a href="flightmodels.html#flightmodels.tools.ramsey_binavg">ramsey_binavg() (in module flightmodels.tools)</a>
+</li>
+      <li><a href="flightmodels.html#flightmodels.tools.ramsey_offset">ramsey_offset() (in module flightmodels.tools)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="flightmodels.html#flightmodels.tools.reformat_units_var">reformat_units_var() (in module flightmodels.tools)</a>
+</li>
       <li><a href="flightmodels.html#flightmodels.utilities.resolve_file_path">resolve_file_path() (in module flightmodels.utilities)</a>
 </li>
   </ul></td>
