deploy: 053a53cb0e8352de4089ccadec85f7d8058f0d4b

--- a/genindex.html
+++ b/genindex.html
@@ -121,12 +121,14 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="gliderflightOG1.html#gliderflightOG1.tools.calc_w_meas">calc_w_meas() (in module gliderflightOG1.tools)</a>
 </li>
-      <li><a href="gliderflightOG1.html#gliderflightOG1.tools.choose_min_long">choose_min_long() (in module gliderflightOG1.tools)</a>
+      <li><a href="gliderflightOG1.html#gliderflightOG1.utilities.check_og1_flight_variables">check_og1_flight_variables() (in module gliderflightOG1.utilities)</a>
 </li>
-      <li><a href="gliderflightOG1.html#gliderflightOG1.tools.choose_min_prof">choose_min_prof() (in module gliderflightOG1.tools)</a>
+      <li><a href="gliderflightOG1.html#gliderflightOG1.tools.choose_min_long">choose_min_long() (in module gliderflightOG1.tools)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="gliderflightOG1.html#gliderflightOG1.tools.choose_min_prof">choose_min_prof() (in module gliderflightOG1.tools)</a>
+</li>
       <li><a href="gliderflightOG1.html#gliderflightOG1.tools.compute_insitu_density">compute_insitu_density() (in module gliderflightOG1.tools)</a>
 </li>
       <li><a href="gliderflightOG1.html#gliderflightOG1.tools.convert_units_var">convert_units_var() (in module gliderflightOG1.tools)</a>
