--- a/_modules/gliderflightOG1/utilities.html
+++ b/_modules/gliderflightOG1/utilities.html
@@ -99,6 +99,20 @@
 
 <span class="n">log</span> <span class="o">=</span> <span class="n">logger</span><span class="o">.</span><span class="n">log</span>
 
+<span class="c1"># OG1 Variable Requirements for Flight Model Functions</span>
+<span class="n">OG1_FLIGHT_MODEL_VARS</span> <span class="o">=</span> <span class="p">{</span>
+    <span class="s2">&quot;flightvec_ds&quot;</span><span class="p">:</span> <span class="p">{</span>
+        <span class="s2">&quot;required&quot;</span><span class="p">:</span> <span class="p">[</span><span class="s2">&quot;PITCH&quot;</span><span class="p">,</span> <span class="s2">&quot;DEPTH&quot;</span><span class="p">,</span> <span class="s2">&quot;TIME&quot;</span><span class="p">],</span>  <span class="c1"># Basic flight model variables</span>
+        <span class="s2">&quot;optional&quot;</span><span class="p">:</span> <span class="p">[</span><span class="s2">&quot;BUOYANCY&quot;</span><span class="p">,</span> <span class="s2">&quot;RHO0&quot;</span><span class="p">],</span>  <span class="c1"># Can be calculated if missing</span>
+        <span class="s2">&quot;description&quot;</span><span class="p">:</span> <span class="s2">&quot;Core flight model calculation requiring pitch angle and depth&quot;</span><span class="p">,</span>
+    <span class="p">},</span>
+    <span class="s2">&quot;regress_all_vec&quot;</span><span class="p">:</span> <span class="p">{</span>
+        <span class="s2">&quot;required&quot;</span><span class="p">:</span> <span class="p">[</span><span class="s2">&quot;PITCH&quot;</span><span class="p">,</span> <span class="s2">&quot;DEPTH&quot;</span><span class="p">,</span> <span class="s2">&quot;TIME&quot;</span><span class="p">,</span> <span class="s2">&quot;DIVENUM&quot;</span><span class="p">,</span> <span class="s2">&quot;UPDN&quot;</span><span class="p">],</span>
+        <span class="s2">&quot;optional&quot;</span><span class="p">:</span> <span class="p">[</span><span class="s2">&quot;TEMP&quot;</span><span class="p">,</span> <span class="s2">&quot;PSAL&quot;</span><span class="p">,</span> <span class="s2">&quot;GLIDER_VERT_VELO_DZDT&quot;</span><span class="p">,</span> <span class="s2">&quot;PRES&quot;</span><span class="p">],</span>
+        <span class="s2">&quot;description&quot;</span><span class="p">:</span> <span class="s2">&quot;Flight model parameter optimization requiring dive profiles&quot;</span><span class="p">,</span>
+    <span class="p">},</span>
+<span class="p">}</span>
+
 
 <span class="k">def</span><span class="w"> </span><span class="nf">_check_necessary_variables</span><span class="p">(</span><span class="n">ds</span><span class="p">:</span> <span class="n">xr</span><span class="o">.</span><span class="n">Dataset</span><span class="p">,</span> <span class="nb">vars</span><span class="p">:</span> <span class="nb">list</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;Checks that all of a list of variables are present in a dataset.</span>
@@ -124,6 +138,52 @@
     <span class="k">if</span> <span class="n">missing_vars</span><span class="p">:</span>
         <span class="n">msg</span> <span class="o">=</span> <span class="sa">f</span><span class="s2">&quot;Required variables </span><span class="si">{</span><span class="nb">list</span><span class="p">(</span><span class="n">missing_vars</span><span class="p">)</span><span class="si">}</span><span class="s2"> do not exist in the supplied dataset.&quot;</span>
         <span class="k">raise</span> <span class="ne">KeyError</span><span class="p">(</span><span class="n">msg</span><span class="p">)</span>
+
+
+<div class="viewcode-block" id="check_og1_flight_variables">
+<a class="viewcode-back" href="../../gliderflightOG1.html#gliderflightOG1.utilities.check_og1_flight_variables">[docs]</a>
+<span class="k">def</span><span class="w"> </span><span class="nf">check_og1_flight_variables</span><span class="p">(</span><span class="n">ds</span><span class="p">:</span> <span class="n">xr</span><span class="o">.</span><span class="n">Dataset</span><span class="p">,</span> <span class="n">function_name</span><span class="p">:</span> <span class="nb">str</span><span class="p">):</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;Check that a dataset contains required OG1 variables for flight model functions.</span>
+
+<span class="sd">    Parameters</span>
+<span class="sd">    ----------</span>
+<span class="sd">    ds : xr.Dataset</span>
+<span class="sd">        OG1 format glider dataset to validate</span>
+<span class="sd">    function_name : str</span>
+<span class="sd">        Name of the flight model function (key in OG1_FLIGHT_MODEL_VARS)</span>
+
+<span class="sd">    Raises</span>
+<span class="sd">    ------</span>
+<span class="sd">    KeyError</span>
+<span class="sd">        If required variables are missing</span>
+<span class="sd">    ValueError</span>
+<span class="sd">        If function_name is not recognized</span>
+
+<span class="sd">    Returns</span>
+<span class="sd">    -------</span>
+<span class="sd">    missing_optional : list</span>
+<span class="sd">        List of optional variables that are missing (for informational purposes)</span>
+<span class="sd">    &quot;&quot;&quot;</span>
+    <span class="k">if</span> <span class="n">function_name</span> <span class="ow">not</span> <span class="ow">in</span> <span class="n">OG1_FLIGHT_MODEL_VARS</span><span class="p">:</span>
+        <span class="k">raise</span> <span class="ne">ValueError</span><span class="p">(</span>
+            <span class="sa">f</span><span class="s2">&quot;Unknown function &#39;</span><span class="si">{</span><span class="n">function_name</span><span class="si">}</span><span class="s2">&#39;. Available: </span><span class="si">{</span><span class="nb">list</span><span class="p">(</span><span class="n">OG1_FLIGHT_MODEL_VARS</span><span class="o">.</span><span class="n">keys</span><span class="p">())</span><span class="si">}</span><span class="s2">&quot;</span>
+        <span class="p">)</span>
+
+    <span class="n">requirements</span> <span class="o">=</span> <span class="n">OG1_FLIGHT_MODEL_VARS</span><span class="p">[</span><span class="n">function_name</span><span class="p">]</span>
+
+    <span class="c1"># Check required variables</span>
+    <span class="n">_check_necessary_variables</span><span class="p">(</span><span class="n">ds</span><span class="p">,</span> <span class="n">requirements</span><span class="p">[</span><span class="s2">&quot;required&quot;</span><span class="p">])</span>
+
+    <span class="c1"># Check optional variables (don&#39;t raise error, just return list)</span>
+    <span class="n">missing_optional</span> <span class="o">=</span> <span class="nb">set</span><span class="p">(</span><span class="n">requirements</span><span class="p">[</span><span class="s2">&quot;optional&quot;</span><span class="p">])</span><span class="o">.</span><span class="n">difference</span><span class="p">(</span><span class="nb">set</span><span class="p">(</span><span class="n">ds</span><span class="o">.</span><span class="n">variables</span><span class="p">))</span>
+
+    <span class="k">if</span> <span class="n">missing_optional</span><span class="p">:</span>
+        <span class="n">log_info</span><span class="p">(</span>
+            <span class="sa">f</span><span class="s2">&quot;Optional variables missing for </span><span class="si">{</span><span class="n">function_name</span><span class="si">}</span><span class="s2">: </span><span class="si">{</span><span class="nb">list</span><span class="p">(</span><span class="n">missing_optional</span><span class="p">)</span><span class="si">}</span><span class="s2">&quot;</span>
+        <span class="p">)</span>
+
+    <span class="k">return</span> <span class="nb">list</span><span class="p">(</span><span class="n">missing_optional</span><span class="p">)</span></div>
+
 
 
 <div class="viewcode-block" id="get_default_data_dir">
